fix(timestamp): Message timestamp to right on mobile

--- a/src/components/messages/PeerAndMessage/PeerAndMessage.scss
+++ b/src/components/messages/PeerAndMessage/PeerAndMessage.scss
@@ -16,6 +16,12 @@
     max-width: 15em;
   }
 
+  &__text {
+    @media screen and (max-width: 700px) {
+      max-width: none;
+    }
+  }
+
   &__peer__mobile {
     width: 100%;
     display: flex;
